--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
 .bl-add{
     margin: 10px;
     line-height: 30px;
-    width: 82%;
+    width: 75%;
 }
 
 .bl-bought {
@@ -33,13 +33,14 @@ body{
     background: white;
     width: 30%;
     float: right;
-    
+    border: 1px solid gray;
+    margin-top: -275px;
+    /* margin-top: -25%;*/
 }
 
 .bl-product {
     float: left;
-    width: 30%;
-    
+    width: 30%;   
 }
 
 .bl-item{
@@ -53,54 +54,101 @@ body{
     text-decoration: none;
     font-size: 12px;
     font-family:"Lucida Calligraphy",cursive, sans-serif;
-
 }
+
 .bl-product .item {
-    padding-left: 25px;
-     line-height: 50px;
-     font-family:"Lucida Calligraphy",cursive, sans-serif;
+    padding-left: 7%;
+    line-height: 50px;
+    font-family:"Lucida Calligraphy",cursive, sans-serif;
 }
-
 
 .bl-row {
     height: 60px;
-    overflow: hidden;
-    border-top: 1px solid gray;
     padding-top: 10px;
-
+    border: 1px solid gray;
+    position: relative;
+    /*overflow: hidden;*/
 }
 
 .bl-title{
     font-weight: bold;
-     font-family:"Lucida Calligraphy",cursive, sans-serif;
-     font-size: 20px;
+    font-family:"Lucida Calligraphy",cursive, sans-serif;
+    font-size: 20px;
     border-top: 1px solid gray;
-     padding: 8px;
-     padding-left:20px;
-
+    padding: 8px;
+    padding-left:20px;
 }
 
-.bl-need{
+.bl-need, .already-bought{
     border-top: 1px solid gray;
     padding: 10px;
 }
 
 .bl-count{
-    line-height: 50px;
-     text-indent: 85px ;
+ line-height: 50px;
+ display: inline-block;
+ position: absolute;
 }
 
 .bl-buttons {
     line-height: 50px;
     width: 25%;
-    float: right;
-  text-align: right;
-  padding-right: 30px;
+    right: 0;
+    text-align: right;
+    padding-right: 30px;
+    display: inline-block;
+    position: absolute;
 }
+
 .bl-left{
     width: 70%;
 }
-/*ÐšÐ½Ð¾Ð¿ÐºÐ¸*/
+
+.bl-text{
+    position: relative;
+    border: 1px solid gray;
+}
+
+.already-bought .bl-item{
+    text-decoration: line-through;
+}
+
+.sticker{
+    position:fixed;
+    width: 150px;
+    height: 150px;
+    bottom:-110px;
+    left: 10px;
+    background-color: #AD0E6F;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    border-radius: 15px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    transition: all 100ms linear;
+}
+
+.sticker:hover{
+    transform:translateY(-100px);
+}
+
+.buy{
+    font-size: 37px;
+    font-weight: bold;
+}
+
+.created{
+    margin-top: 15px;
+    font-size: 20px;
+}
+
+.name{
+    font-size: 25px;
+    margin-top: 20px;
+}
+
+/*Buttons*/
 .bl-label {
     background: #cdcbcb;
     font-size: 14px;
@@ -109,11 +157,12 @@ body{
     padding-top: 7px;
     padding-bottom: 6px;
     border-radius: 20%;
-
 }
+
 .bl-plus {
+    display: inline-block;
     background: #04a613;
-     color: white;
+    color: white;
     border: 0px;
     outline: none;
     border-radius: 50%;
@@ -126,6 +175,7 @@ body{
 }
 
 .bl-minus {
+    display: inline-block;
     background: #FF9477;
     color: white;
     border: 0px;
@@ -143,7 +193,7 @@ body{
     background: #1462CE;
     color: white;
     border: 0px;
-     padding-right: 14px;
+    padding-right: 14px;
     padding-left: 14px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -153,11 +203,11 @@ body{
     font-size: 15px;
     font-family:"Lucida Calligraphy",cursive, sans-serif;
     font-weight: bolder;
-     border-radius: 10%;
+    border-radius: 10%;
 }
 
 .bl-ok{
-background: #E5E4E2;
+    background: #E5E4E2;
     color: black;
     border: 0px;
     padding: 8px;
@@ -171,7 +221,7 @@ background: #E5E4E2;
 }
 
 .bl-delete{
-background: #E10000;
+    background: #E10000;
     color: white;
     border: 0px;
     padding-right: 13px;
@@ -196,4 +246,81 @@ background: #E10000;
     padding-top: 3px;
     padding-bottom: 3px;
     border-radius: 50%;
+}
+
+button{
+    position: relative;
+}
+
+button::before{
+    /*content: "Tooltip";*/
+    content: attr(data-tooltip);
+    position: absolute;
+    top: -40px;
+    left: 50%;
+    margin-left: -50px; 
+    width: 80px;
+    height: 40px;
+    font-size: 14px;
+    font-family:"Lucida Calligraphy",cursive, sans-serif;
+    background-color: #FFA5E1;
+    color: black;
+    transform:scale(0);
+    transform-origin:50% 100%;
+    transition: all 300ms linear;
+}
+
+button:hover::before{
+  transform:scale(1);
+}
+
+@media print{
+
+   .sticker{
+    background: white;
+    color: black;
+    border: 3px solid black;
+} 
+
+.buy{
+    display: none;
+}
+
+.created{
+    display: none;
+}
+
+.name{
+    margin-top: 5px;
+}
+
+}
+
+@media (max-width: 730px){
+
+    .bl-background {
+        margin-top: 0px;
+    }
+
+    .bl-bought{
+        width: 100%;
+        margin-top: 0;
+    }
+
+    .container{
+        min-width: 500px;
+    }
+
+    .bl-left{
+        width: 100%;
+        margin:25px;
+    } 
+
+}
+
+.clearfix::after {
+    visibility: hidden; 
+    content:""; 
+    height: 0; 
+    clear: both; 
 }
